--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,21 @@
-body{ background-color: #D68910}
-h1{color: #1B2631}
+body{ background-color: #D68910;
+    background-image: url( ../imagenes/bondiola-disco.jpg );
+    background-position: center 120px;
+    background-attachment: fixed;}
+h1{color: #D9D9D9}
 h1{font-size: xx-large}
 h1{text-decoration: underline;}
 h2{text-decoration: underline;}
+h2{color: #D9D9D9}
 h3{text-decoration: underline;}
+h3{color: #D9D9D9}
 p{text-align: justify;}
+p{color: #D9D9D9}
 ol{text-align: justify;}
+ol{color: #D9D9D9}
+ul{color: #D9D9D9}
 img{width:520px; height:315px;}
+header{background-color: #D68910;}
+nav{background-color: brown;}
+aside{background-color: #F24605;}
+footer{background-color: olive}
